--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
   <meta property="og:image" content="https://shivambangia.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@varad_bhogayata" />
+  <meta name="twitter:site" content="@Shivam_Bangia" />
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
   <meta name="twitter:description" content="Software Developer" />
-  <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
+  <meta name="twitter:url" content="https://twitter.com/Shivam_Bangia" />
   <meta name="author" content="Shivam Bangia" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
@@ -144,10 +144,10 @@
         4. mdi-file-attachment
         5. mdi-file-folder-shared
         -->
-        <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
+        <!-- <a aria-label="Open Shivam's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Varad's resume in a new tab" href="https://shivambangia.github.io/assets/resume/Varad_Bhogayata_Resume.pdf" target="_blank"
+        <a aria-label="Open Shivam's resume in a new tab" href="https://shivambangia.github.io/assets/resume/Shivam_Bangia_Resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -158,8 +158,8 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Varad
-        Bhogayata</a><span class="black-text">Software Developer</span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Shivam
+        Bangia</a><span class="black-text">Software Developer</span>
     </div>
   </nav>
 
@@ -193,7 +193,7 @@
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Open Varad's Resume in a new tab"
+        <a aria-label="Open Shivam's Resume in a new tab"
           href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
@@ -226,7 +226,7 @@
                 </button>
               </a>
 
-              <!-- <a href="https://angel.co/u/varad_bhogayata" target="_blank">
+              <!-- <a href="https://angel.co/u/Shivam_Bangia" target="_blank">
                 <button class="icon-btn angellist">
                   <i class="fa fa-angellist"></i>
                 </button>
@@ -260,19 +260,19 @@
           </h2>
         </blockquote> -->        
         <p>
-          I am a Computer Science Grad Student at Arizona State University. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
-
-          I have worked on technologies like Python, Django, Flask, MySQL, PostgreSQL, MongoDB, HTML5, CSS, Java, C++ during my bachelor's. I have 19 months of professional work experience which helped me strengthen my experience in Python, Flask, and Django.
-
-          I am passionate about developing complex applications that solve real-world problems impacting millions of users.
+          My journey, spanning over 4 years, includes impactful roles in Oracle, HSBC, and JPMorgan, where I've led significant improvements in product efficiency, user experience, and business processes. Currently pursuing an M.S. in Software(Product) Management at Carnegie Mellon University, I'm actively seeking Product Analyst Internship opportunities for Summer '24. Passionate about leveraging my skills in product strategy, user experience, and data-driven decision-making, I aim to contribute innovatively to the dynamic field of technology and product management.
         </p>
         <p>
           <ul>
+            <li><b>Business:</b> Product Positioning, User Experience, User Stories Creation, Market Needs, Customer Research,
+              Data Driven Product Strategy, Requirement Gathering, Product Life Cycle, Software Development, Customer Journeys</li>
+            <li><b>Leadership::</b> Team Building, Cross-Team Collaboration, Communications, Accountability, Product Enhancement,
+              Problem Solving, Innovation, Product Roadmapping, Decision Making, Public Speaking, Pro-Active, and Analytical Thinker</li>
+            <li><b>Tools::</b> SQL, Microsoft Suite, Python, Excel, Agile, Scrum, Kanban, Jira, Java, Data Analysis, Git, Figma and Android</li>
             <li><b>Languages:</b> Python, Java, JavaScript, C, C++, HTML/CSS, Bash</li>
             <li><b>Databases:</b> MySQL, PostgreSQL, MongoDB</li>
             <li><b>Libraries:</b> NumPy, Pandas, OpenCV</li>
             <li><b>Frameworks:</b> Flask, Django, Node.js, Keras, TensorFlow, PyTorch, Bootstrap, Apache Beam</li>
-            <li><b>Tools & Technologies:</b> Git, Docker, AWS, GCP, Heroku, JIRA</li>
           </ul>
           
         </p>
@@ -981,28 +981,28 @@ of each drug container to estimate the degradation of the drug.
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
+          <a aria-label="Call Shivam" data-position="top" data-tooltip="Call Shivam"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+14805722456</a></a>
+              aria-label="Call Shivam">+14805722456</a></a>
         </p>
         <p>
-          <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
+          <a aria-label="Email Shivam" href="mailto:vBangia@gmail.com" target="_blank" data-position="top"
+            data-tooltip="Email Shivam" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-envelope"></i><a aria-label="Email Shivam" href="mailto:vBangia@gmail.com"
+              class="hoverline">vBangia@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/shivambangia" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View Shivam on GitHub" href="http://github.com/shivambangia" target="_blank"
+            data-position="top" data-tooltip="View Shivam on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/shivambangia" class="hoverline"
+              aria-label="Shivam on Github" href="http://github.com/shivambangia" class="hoverline"
               target="_blank">github.com/shivambangia</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/shivambangia" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Shivam on LinkedIn" href="http://linkedin.com/in/shivambangia" target="_blank"
+            data-position="top" data-tooltip="View Shivam on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/shivambangia"
+              class="fa fa-linkedin"></i><a aria-label="Shivam on LinkedIn" href="http://linkedin.com/in/shivambangia"
               class="hoverline" target="_blank">linkedin.com/in/shivambangia</a></a>
         </p>
       </div>
@@ -1013,7 +1013,7 @@ of each drug container to estimate the degradation of the drug.
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Pythonist", "Developer", "Fast Learner"],
+      strings: ["Product Manager", "Fast Learner", "Technically Aligned"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
