--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
           Detail-oriented Software Developer with professional experience in Backend Development, Machine Learning, Computer Vision. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision.           
         </p> -->
         <p>
-          Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, which provides professional development, interesting experiences and personal growth.
+          Looking for opportunities to work in Product Management domain which combines my past skills of software engineering which provides professional development, interesting experiences and personal growth. 
         </p>
         <!-- <p>
           Another Paragraph
