--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
           </h2>
         </blockquote> -->        
         <p>
-          My journey, spanning over 4 years, includes impactful roles in Oracle, HSBC, and JPMorgan, where I've led significant improvements in product efficiency, user experience, and business processes. Currently pursuing an M.S. in Software(Product) Management at Carnegie Mellon University, I'm actively seeking Product Analyst Internship opportunities for Summer '24. Passionate about leveraging my skills in product strategy, user experience, and data-driven decision-making, I aim to contribute innovatively to the dynamic field of technology and product management.
+          My journey, spanning over 4 years, includes impactful roles in Oracle, HSBC, and JPMorgan, where I've led significant improvements in product efficiency, user experience, and business processes. Currently pursuing an M.S. in Software(Product) Management at Carnegie Mellon University, I'm actively seeking Product Management Internship opportunities for Summer '24. Passionate about leveraging my skills in product strategy, user experience, and data-driven decision-making, I aim to contribute innovatively to the dynamic field of technology and product management.
         </p>
         <p>
           <ul>
@@ -309,18 +309,18 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.zhiffy.com/" target="_blank"><img alt="Zhiffy logo"
+                <a href="https://www.zhiffy.com/" target="_blank"><img alt="Oracle logo"
                     src="/assets/img/exp-zhiffy-logo-1.webp" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.zhiffy.com/" target="_blank"
-                      class="teal-text hoverline">Zhiffy</a></span>
+                      class="teal-text hoverline">Oracle</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Engineer</div>
+            <div class="role brown-text text-darken-2">Product Analyst/Software Engineer</div>
             <ul>
               <li>
                 Developed and managed the backend of an e-commerce platform using Flask, MongoDB, and AWS.
