--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               <h2>Hi, I'm <span class="teal">Shivam Bangia</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Professional with four years of experience at Fortune 500 companies, specializing in global business expansion and product development, currently seeking internship opportunities as a Product Analyst for Summer 2024.</h5>
+              <h5>Professional with four years of experience at Fortune 500 companies, specializing in global business expansion and product development, currently seeking Internship opportunities as a Product Management for Summer 2024.</h5>
             </div>
             <div class="social">
               <a href="http://linkedin.com/in/shivambangia" target="_blank">
