--- a/index.html
+++ b/index.html
@@ -309,13 +309,13 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.zhiffy.com/" target="_blank"><img alt="Oracle logo"
-                    src="/assets/img/exp-zhiffy-logo-1.webp" class="responsive-img center-block" /></a>
+                <a href="https://www.oracle.com/human-capital-management/recruiting/" target="_blank"><img alt="Oracle logo"
+                    src="/assets/img/oracle-logo.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.zhiffy.com/" target="_blank"
+                  <span class="card-title"><a href="https://www.oracle.com/human-capital-management/recruiting/" target="_blank"
                       class="teal-text hoverline">Oracle</a></span>
                 </p>
               </div>
@@ -323,21 +323,20 @@
             <div class="role brown-text text-darken-2">Product Analyst/Software Engineer</div>
             <ul>
               <li>
-                Developed and managed the backend of an e-commerce platform using Flask, MongoDB, and AWS.
+                Worked on analystics tool and full stack development within Oracle Fusion Cloud Recruiting
               </li>
               <li>
-                Worked on three web applications targeting customers, selling vendors, and admin users; built 50+ RESTful APIs with functionalities
-such as login/sign up, view a product, add a product to cart, checkout the order, etc.
+                Spearheaded cross-functional product team to implement and test laptop ordering feature in recruiting application, reducing the customer effort score(CES) by 15%
               </li>
-              <li>Improved the response time by 20% by refactoring the codebase and changing database design and queries.</li>
-              <li>Added a bulk upload feature which reduced the manual work of adding products into a database.</li>
+              <li>Boosted HR team efficiency by 60 hour/week by automating manual tasks using business Intelligence tools, achieving a streamlined recruiting process that reduced the time to create and offer a job to a candidate by 33%</li>
+              <li>Mentored a team of 4 interns to rectify functional gaps in the existing flow by analyzing user behaviors and studying market trends</li>
               <li>
-                <b>Tools:</b> Python, Flask, MongoDB
+                <b>Tools:</b> Jira, Confluence, Business Intelligence Publisher, Java, Javascript
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>July 2020 - Nov 2020 | Hyderabad, India</span>
+            <span>Jan 2020 - Mar 2023 | Mumbai, India</span>
           </div>
         </div>
 
@@ -346,40 +345,34 @@ such as login/sign up, view a product, add a product to cart, checkout the order
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.meditab.com" target="_blank"><img alt="Meditab logo"
-                    src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
+                <a href="https://www.us.hsbc.com/" target="_blank"><img alt="Hsbc logo"
+                    src="/assets/img/hsbc-logo.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="http://meditab.com" target="_blank"
+                  <span class="card-title"><a href="https://www.us.hsbc.com/" target="_blank"
                       class="teal-text hoverline">Meditab</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Programmer Analyst</div>
+            <div class="role brown-text text-darken-2">Software Developer</div>
             <ul>
               <li>
-                Customized a tree-based optimization algorithm that separates drugs into distinct groups to maximize the concurrent execution of drug
-dispenser robots; improved an optimization algorithm that reduced the cycle-time of the automation process by 25%.
+                Launched HSBC supplementary debit card feature in UAE market, empowering primary debit card holders to control supplementary card PINs and daily spending limits, resulting in an increase in spending by $250 million by HSBC customers
               </li>
               <li>
-                Devised a customized recursion algorithm to extend the functionality of the current environment to a multi-robot and multi-system
-environment
+                Presented, created, and rolled out a Minimum Viable Product (MVP) at a global hackathon, designed to assess daily employee sentiment and reduce follow up time of stakeholders by 50%
               </li>
               <li>
-                Built a modular video analytics app using Flask, OpenCV that tracks the location of each human in a multi-camera environment;
-utilized perspective transformation, object detection, and object tracking to find the location of a human.
+                Improved the reliability of the UK mainframe database by developing a backup system, reducing downtime by 10%.
               </li>
-              <li>Increased the speed of the video analytics app by 20% by using a customized YOLOv3 algorithm to perform object detection and
-                DeepSORT algorithm for multi-object tracking.</li>
-              <li>
-                <b>Tools:</b> Python, Flask, OpenCV, Keras, Tensorflow, PyTorch
+                <b>Tools:</b> Mainframe, Java, AWS, Tensorflow, PyTorch
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>Dec 2018 - July 2019 | Ahmedabad, India</span>
+            <span>July 2018 - Dec 2019 | Pune, India</span>
           </div>
         </div>
 
@@ -388,73 +381,38 @@ utilized perspective transformation, object detection, and object tracking to fi
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <img alt="Mtag logo" src="/assets/img/exp-mtag-logo-250x250.jpg" class="responsive-img center-block" />
+                <img alt="JP Morgan logo" src="/assets/img/jp-logo.png" class="responsive-img center-block" />
 
               </div>
 
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="#experience" class="teal-text hoverline">Mtag
-                      Innovations</a></span>
+                  <span class="card-title"><a href="https://privatebank.jpmorgan.com/nam/en/services/banking/custody-services" class="teal-text hoverline">
+                    J.P. Morgan</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Developer</div>
+            <div class="role brown-text text-darken-2">Corporate Analyst</div>
             <ul>
               <li>
-                Programmed a cloud-based web app using Flask and JavaScript aimed at storing, visualizing, and tracking temperature and humidity
-of each drug container to estimate the degradation of the drug.
+                Saved $60K+ per year by improving the Pre-Settlement verification process by 25% and created efficiency of 120hr/wk
               </li>
               <li>
-                Created an alert system to send notifications and emails when the parameters exceed the threshold.
-              </li>
+                Created capacity of 80hr/week; reduced errors by 30% & restructured controls across Security Payment Process              </li>
               <li>
-                <b>Tools:</b> Python, Flask, JavaScript
+                <b>Tools:</b> VBA, Excel
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>July 2018 - Nov 2018 | Ahmedabad, India</span>
+            <span>July 2018 - Nov 2018 | Mumbai, India</span>
           </div>
         </div>
 
         <!-- Experience 3 -->
-        <div class="card">
-          <div class="card-content">
-            <div class="row">
-              <div class="col s12 m2">
-                <a href="https://www.cignex.com" target="_blank"><img alt="Cignex logo"
-                    src="/assets/img/exp-cignex-logo.png" class="responsive-img center-block" /></a>
-              </div>
-              <div class="col s12 m10">
-                <p>
-                  <span class="card-title"><a href="https://www.cignex.com" target="_blank"
-                      class="teal-text hoverline">CIGNEX
-                      Datamatics </a></span>
-                </p>
-              </div>
-            </div>
-            <div class="role brown-text text-darken-2">Project Trainee</div>
-            <ul>
-              <li>
-                Designed a library management system for a local library, where we undertook activities like requirement
-                elicitation, preparing Data Flow
-                and Entity-Relationship diagrams.
-              </li>
-              <li>
-                Delivered a solution for a POC involving Automatic Financial Document Classifier using Natural Language
-                Processing and Support Vector
-                Machines with 96% accuracy on the company’s data.
-              </li>
-              <li>
-                <b>Tools:</b> Python, Scikit-learn, NLTK
-              </li>
-            </ul>
-          </div>
-          <div class="card-action">
-            <span>June 2017 - July 2017 | Ahmedabad, India</span>
-          </div>
+        
+        
         </div>
 
       </div>
