--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.us.hsbc.com/" target="_blank"
-                      class="teal-text hoverline">Meditab</a></span>
+                      class="teal-text hoverline">HSBC</a></span>
                 </p>
               </div>
             </div>
