--- a/index.html
+++ b/index.html
@@ -875,22 +875,22 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Arizona State University</a></span>
+                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Carnegie Mellon University</a></span>
                 </p>
-                <p class="brown-text">Tempe, USA</p>
+                <p class="brown-text">California, USA</p>
                 <p>
-                  <b>Degree: </b>Master of Science in Computer Science      
+                  <b>Degree: </b>Master of Science in Software Management
                   <br>
-                  <b>CGPA: </b>4.0/4.0
+                  <b>CGPA: </b>3.7/4.0
                 </p>
 
                 <ul>
                   <p>
                     <b>Relevant Courseworks:</b>
                   <ul>
-                    <li>Distributed Database Systems</li>
-                    <li>Cloud Computing</li>
-                    <li>Foundations of Algorithms</li>                    
+                    <li>Integrated Thinking and Innovation</li>
+                    <li>Foundation of Software Management</li>
+                    <li>Product Management</li>                    
                   </ul>
                   </p>
 
@@ -904,14 +904,14 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">School of Engineering and Applied Science, Ahmedabad
-                      University</a></span>
+                  <span class="card-title"><a href="#" target="_blank" class="teal-text hoverline">Thapar University
+                      </a></span>
                 </p>
                 <p class="brown-text">Ahmedabad, India</p>
                 <p>
-                  <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
+                  <b>Degree: </b>Bachelor of Engineering 
                   <br>
-                  <b>CGPA: </b>3.13/4.33
+                  <b>CGPA: </b>3.2/4.0
                 </p>
 
                 <ul>
@@ -941,13 +941,13 @@
         <p>
           <a aria-label="Call Shivam" data-position="top" data-tooltip="Call Shivam"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Shivam">+14805722456</a></a>
+              aria-label="Call Shivam">+19082191289</a></a>
         </p>
         <p>
-          <a aria-label="Email Shivam" href="mailto:vBangia@gmail.com" target="_blank" data-position="top"
+          <a aria-label="Email Shivam" href="mailto:bangia.shivam1996@gmail.com" target="_blank" data-position="top"
             data-tooltip="Email Shivam" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Shivam" href="mailto:vBangia@gmail.com"
-              class="hoverline">vBangia@gmail.com</a></a>
+              class="fa fa-envelope"></i><a aria-label="Email Shivam" href="mailto:bangia.shivam1996@gmail.com"
+              class="hoverline">bangia.shivam1996@gmail.com</a></a>
         </p>
         <p>
           <a aria-label="View Shivam on GitHub" href="http://github.com/shivambangia" target="_blank"
