--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
                   <span class="card-title"><a href="#" target="_blank" class="teal-text hoverline">Thapar University
                       </a></span>
                 </p>
-                <p class="brown-text">Ahmedabad, India</p>
+                <p class="brown-text">Patiala, India</p>
                 <p>
                   <b>Degree: </b>Bachelor of Engineering 
                   <br>
