--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@Shivam_Bangia" />
-  <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
+  <meta name="twitter:title" content="Product Manager | Technofreak | Explorer | Minimalist | Humane" />
   <meta name="twitter:description" content="Software Developer" />
   <meta name="twitter:url" content="https://twitter.com/Shivam_Bangia" />
   <meta name="author" content="Shivam Bangia" />
