--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@Shivam_Bangia" />
-  <meta name="twitter:title" content="Product Manager | Technofreak | Explorer | Minimalist | Humane" />
+  <meta name="twitter:title" content="" />
   <meta name="twitter:description" content="Software Developer" />
   <meta name="twitter:url" content="https://twitter.com/Shivam_Bangia" />
   <meta name="author" content="Shivam Bangia" />
-  <meta name="description" content="Product Manager with a passion for Technology and artificial intelligence." />
+  <meta name="description" content="Product Professional with a passion for Technology and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png" />
@@ -971,7 +971,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Product Manager", "Fast Learner", "Technically Aligned"],
+      strings: ["Product Oriented", "Fast Learner", "Technically Aligned"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
