--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               <h2>Hi, I'm <span class="teal">Shivam Bangia</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Professional with four years of experience at Fortune 500 companies, specializing in global business expansion and product development, currently seeking Internship opportunities as a Product Management for Summer 2024.</h5>
+              <h5>Professional with four years of experience at Fortune 500 companies, specializing in global business expansion and product development, currently seeking Internship opportunities for Summer 2024.</h5>
             </div>
             <div class="social">
               <a href="http://linkedin.com/in/shivambangia" target="_blank">
@@ -282,7 +282,7 @@
           Detail-oriented Software Developer with professional experience in Backend Development, Machine Learning, Computer Vision. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision.           
         </p> -->
         <p>
-          Looking for opportunities to work in Product Management domain which combines my past skills of software engineering which provides professional development, interesting experiences and personal growth. 
+          Looking for opportunities to work in SaaS domain which combines my past skills of software engineering which provides professional development, interesting experiences and personal growth. 
         </p>
         <!-- <p>
           Another Paragraph
@@ -888,9 +888,9 @@
                   <p>
                     <b>Relevant Courseworks:</b>
                   <ul>
-                    <li>Integrated Thinking and Innovation</li>
+                    <li>Applied AI</li>
                     <li>Foundation of Software Management</li>
-                    <li>Product Management</li>                    
+                    <li>Process and Project Management</li>                    
                   </ul>
                   </p>
 
